// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ak huge 1`] = `
<style>
.IS1 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 22;
  line-height: 22px;
}

.IS2 {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  height: 80;
}

.IS3 {
  align-self: flex-end;
  width: 85%;
  margin-top: -25px;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "height": 243,
      "marginLeft": "10px",
      "marginRight": "10px",
      "overflow": "hidden",
    }
  }
  url="/crossword/123"
  withStar={false}
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
      role="heading"
    >
      Times Concise medium No 7881
    </div>
  </div>
  <Image
    aspectRatio={1.5}
    className="IS3"
    disablePlaceholder={true}
    fill={true}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;

exports[`tile ak medium 1`] = `
<style>
.IS1 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 20;
  line-height: 20px;
}

.IS2 {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  height: 80;
}

.IS3 {
  align-self: flex-end;
  width: 85%;
  margin-top: -25px;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "height": 143,
      "marginLeft": "10px",
      "marginRight": "10px",
      "overflow": "hidden",
    }
  }
  url="/crossword/123"
  withStar={false}
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
      role="heading"
    >
      Times Concise medium No 7881
    </div>
  </div>
  <Image
    aspectRatio={1.5}
    className="IS3"
    disablePlaceholder={true}
    fill={true}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;

exports[`tile ak wide 1`] = `
<style>
.IS1 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 20;
  line-height: 20px;
}

.IS2 {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  height: 80;
}

.IS3 {
  align-self: flex-end;
  width: 85%;
  margin-top: -25px;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "height": 195,
      "marginLeft": "10px",
      "marginRight": "10px",
      "overflow": "hidden",
    }
  }
  url="/crossword/123"
  withStar={false}
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
      role="heading"
    >
      Times Concise medium No 7881
    </div>
  </div>
  <Image
    aspectRatio={1.5}
    className="IS3"
    disablePlaceholder={true}
    fill={true}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;

exports[`tile ak without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 20;
  line-height: 20px;
}

.IS2 {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  height: 80;
}

.IS3 {
  align-self: flex-end;
  width: 85%;
  margin-top: -25px;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "height": 143,
      "marginLeft": "10px",
      "marginRight": "10px",
      "overflow": "hidden",
    }
  }
  url="/crossword/123"
  withStar={false}
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
      role="heading"
    >
      Times Concise medium No 7881
    </div>
  </div>
  <Image
    aspectRatio={1.5}
    className="IS3"
    disablePlaceholder={true}
    fill={true}
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
  />
</Link>
`;
